# libdim

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Makefile.am  README  README.md  bootstrap  configure.ac  makefile_common  setup.sh  setup.sh.orig
build-aux/: ci-template.yml
dim/: dic.h  dic.hxx  dim.h  dim.hxx  dim_common.h  dim_jni.h  dim_tcpip.h  dis.h  dis.hxx
docker/: Dockerfile
docker/centos6/: Dockerfile
docker/centos7/: Dockerfile
extra/: Makefile.am  dim-config.1  dim-config.in  dim-dns.in  dim.spec.in  dim_bridge.1  dim_check_dns.1  dim_did.1  dim_dns.8  dim_get_service.1  dim_send_command.1
ipkg/: control  control.in  rules
src/: conn_handler.c  copy_swap.c  dic.c  diccpp.cxx  dim_jni.c  dim_thr.c  dimcpp.cxx  dis.c  discpp.cxx  dll.c  dna.c  dns.c  dtq.c  hash.c  open_dns.c  sll.c  tcpip.c  tokenstring.cxx  utilities.c
src/benchmark/: benchClient.cxx  benchServer.cxx
src/did/: did.c  did.h  dui_colors.h  dui_util.c
src/examples/: demo_client.c  pvss_dim_client.cxx  pvss_dim_server.cxx  rpc_client.cxx  rpc_server.cxx  test_big_client.c  test_big_server.c  test_client.c  test_client.cxx  test_client_many.c  test_server.c  test_server.cxx
src/util/: check_dim_servers.cxx  dim_get_service.c  dim_send_command.c  dimbridge.cxx
