
EXTRA_DIST		= dim.spec
bin_SCRIPTS		= dim-config

dist_man_MANS		= dim-config.1			\
			  dim_bridge.1			\
			  dim_check_dns.1		\
			  dim_did.1			\
			  dim_dns.8			\
			  dim_get_service.1		\
			  dim_send_command.1

initdir			= ${sysconfdir}/init.d
init_SCRIPTS		= dim-dns 

#pkgconfdir		= $(libdir)/pkgconfig
#pkgconf_DATA		= lib$(PACKAGE).pc 

#
# EOF
#
